
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int debug1 (char*,char*,char*,...) ;
 char* g_addr ;
 int g_cmd ;
 char* g_dir ;
 char* g_file ;
 char* g_length ;
 int g_num ;
 char* g_offset ;
 int g_pid ;
 char* g_string ;
 int parse_cmd (char*) ;
 int parse_u (char*,int,int *) ;
 int parse_ul (char*,int,char**) ;

__attribute__((used)) static bool parse_args(int argc, char **argv) {
 if (argc < 2)
  return 0;

 g_cmd = parse_cmd(argv[1]);

 switch (g_cmd) {
 case 132:
  if (argc > 3)
   return 0;
  if (argc >= 3 && !parse_u(argv[2], 10, &g_num))
   return 0;
  return 1;
 case 130:
  if (argc != 4)
   return 0;
  if (!parse_u(argv[2], 10, &g_pid))
   return 0;
  if (g_pid <= 0)
   return 0;
  g_dir = argv[3];
  debug1("CMD_PID %u %s\n", g_pid, g_dir);
  return 1;
 case 128:
  if (argc < 4 || argc > 5)
   return 0;
  if (!parse_ul(argv[2], 16, &g_addr))
   return 0;
  if (!parse_ul(argv[3], 16, &g_length))
   return 0;
  if (argc == 5)
   g_file = argv[4];
  debug1("CMD_VIRT %016lx %016lx %s\n", g_addr,
    g_length, g_file ? g_file : "NULL");
  return 1;
 case 131:
  if (argc < 4 || argc > 5)
   return 0;
  if (!parse_ul(argv[2], 16, &g_offset))
   return 0;
  if (!parse_ul(argv[3], 16, &g_length))
   return 0;
  if (argc == 5)
   g_file = argv[4];
  debug1("CMD_PHYS %016lx %016lx %s\n", g_offset,
    g_length, g_file ? g_file : "NULL");
  return 1;
 case 129:
  if (argc < 3 || argc > 5)
   return 0;
  g_string = argv[2];
  if (argc >= 4 && !parse_ul(argv[3], 16, &g_offset))
   return 0;
  if (argc >= 5 && !parse_ul(argv[4], 16, &g_length))
   return 0;
  debug1("CMD_SEARCH <%s> %016lx %016lx\n",
    g_string, g_offset, g_length);
  return 1;
 default:
  return 0;
 }

 return 1;
}
